# JEPSAM

./: .gitignore  CMakeLists.txt  README.md  custom-pick-place.asd  summer_2023_env_updated.yml
AEJEPS/: README.md  requirements.txt
AEJEPS/configs/: aejeps_cfg.yaml  default.yaml
AEJEPS/notebooks/: Model_IO.ipynb  SimpleDataLoader.ipynb  TrainJEPSAM.ipynb  dataPrep.ipynb  dataViz.ipynb
AEJEPS/notebooks/.ipynb_checkpoints/: Model_IO-checkpoint.ipynb  dataViz-checkpoint.ipynb
AEJEPS/src/: dataloader.py  dataloaderV1.py  losses.py  model2.py  models.py  run.py  simpleTokenizer.txt  train.py  vocabulary.py
AEJEPS/src/utils/: ae_resnet.py  model_utils.py  parser.py
DATAGEN/: custom-pick-place.asd  custom-pick-place.asd~  package.xml
DATAGEN/src/: atomic-action-plans.lisp  atomic-action-plans.lisp~  generate-data.lisp  generate-data.lisp~  generate-samples.lisp  generate-samples.lisp~  move-bottle-plans.lisp~  package.lisp~  pick-place-designators.lisp  pick-place-plans.lisp  tutorial.lisp  tutorial.lisp~
JEPSAM/notebooks/: Dataset.ipynb  Model.ipynb
JEPSAM/src/: config.py  config.yml  dataloader.py  jepsam_tokenizer.py  models.py  run.sh  vocabulary.py
JEPSAM/src/utils/: parser.py
src/: atomic-action-designators.lisp  full-plans.lisp~  generate-data.fasl  generate-data.lisp  generate-samples.fasl  generate-samples.lisp  move-bottle.lisp~  package.lisp  pick-place-designators.lisp~  pick-place-plans.fasl  pick-place-plans.lisp  pick-place-plans.lisp~  setup.lisp
