<package format="2">
  <name>custom_pick_place</name>
  <version>0.7.0</version>
  <description>
     cram_mobile_pick_place_plans
  </description>
  <author>Gual Hadush</author>
  <maintainer email="medhnh@andrew.cmu.edu">Gual Hadush</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cl_transforms</depend>
  <depend>cl_transforms_stamped</depend>
  <depend>roslisp</depend>
  <depend>roslisp_utilities</depend>
  <depend>cram_language</depend>
  <depend>cram_prolog</depend>
  <depend>cram_designators</depend>
  <depend>cram_occasions_events</depend>
  <depend>cram_executive</depend>
  <depend>cram_utilities</depend>

  <depend>cram_tf</depend>
  <depend>cram_common_failures</depend>
  <depend>cram_object_interfaces</depend>
  <depend>cram_plan_occasions_events</depend>
</package>
